--- a/foundations/flex/05-flex-modal/index.html
+++ b/foundations/flex/05-flex-modal/index.html
@@ -8,13 +8,27 @@
     <title>Modal</title>
   </head>
   <body>
-    <div class="modal">
-      <div class="icon">!</div>
-      <div class="header">Are you sure you want to do that?</div>
-      <button class="close-button">✖</button>
-      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-      <button class="continue">Continue</button>
-      <button class="cancel">Cancel</button>
+    <div class="modal"> <!-- go row -->
+
+      <div class="icon">!</div> <!-- !!! -->
+
+      <div> <!-- all go right, go column -->
+
+        <div class="title-n-x"> <!-- title with x, go row-->
+          <div class="header">Are you sure you want to do that?</div>
+          <button class="close-button">✖</button>
+        </div>
+
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+
+        <button class="continue">Continue</button>
+        <button class="cancel">Cancel</button>
+
+      </div>
+      
+
+      
+
     </div>
   </body>
 </html>
